# Tunelo

./: .gitignore  README.md  index.html  package.json  vite.config.js
.github/workflows/: release.yml
docs/: guide.md
src/: App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  ssh_config.rs
src-tauri/src/commands/: host_cmd.rs  import_cmd.rs  mod.rs  settings_cmd.rs  ssh_cmd.rs  tunnel_cmd.rs
src-tauri/src/core/: context.rs  event.rs  mod.rs  startup.rs
src-tauri/src/ssh/: command.rs  host_test.rs  import.rs  mod.rs  probe.rs  runner.rs  supervisor.rs
src-tauri/src/store/: host.rs  mod.rs  tunnel.rs
src-tauri/src/web/: assets.rs  auth.rs  cli.rs  mod.rs  server.rs  sse.rs
src-tauri/src/web/routes/: events.rs  hosts.rs  import.rs  mod.rs  settings.rs  tunnels.rs
src/components/: Confirm.jsx  ui.jsx
src/lib/: data.js  ipc.js  useTweaks.js
src/pages/: Dashboard.jsx  Hosts.jsx  Settings.jsx  Tunnels.jsx
