[package]
name = "tunelo"
version = "0.9.0"
description = "Tunelo · SSH 隧道管理器"
authors = ["kylin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tunelo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# tauri-build is pure Rust (no GTK/glib), so it's a cheap unconditional
# build-dep on every platform. build.rs decides — based on the *target*
# (CARGO_CFG_TARGET_OS) — whether to actually run the desktop codegen,
# skipping it for the Linux web build. Only the *runtime* `tauri` crate
# (below) pulls webkit2gtk/glib, and that's excluded on Linux.
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
tokio = { version = "~1.47", features = ["process", "sync", "time", "io-util", "macros", "rt", "rt-multi-thread", "net", "signal"] }
clap = { version = "4.5", features = ["derive"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "query", "tokio", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"

# Desktop GUI shell — only on platforms we actually ship a window for.
# On Linux the binary is the headless `--web` server only (see main.rs),
# which keeps GTK/glib/webkit out of the dependency graph: the Linux
# GLib version no longer matters, and the build can target musl for a
# fully static, distro-agnostic binary.
[target.'cfg(not(target_os = "linux"))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
